# lvgl_gui_test

./: CMakeLists.txt  README.md  fonts.h  generic_widgets.h  icons.h  init.h  lv_conf.h  lv_drv_conf.h  main.cpp
components/: component.h  components.h  light.h  thermostat.h
lv_drivers/: Makefile  cmake_install.cmake
lv_drivers/sdl/: sdl_common.h
lvgl/: Makefile  cmake_install.cmake
lvgl/src/extra/widgets/colorwheel/: lv_colorwheel.c
